# VKbot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_AND_IMPROVEMENTS.md  CONTRIBUTING.md  MOBILE_ARCHITECTURE_GUIDE.md  README.md  WHITE_LABEL_ROADMAP.md  ai_service.py  apply_migration.py  cache.py  cards_data.py  database.py  database_sync.sql  docker-compose.yml  fix_admin_bot_import4.sh  fix_admin_bot_import5.sh  fix_all_buttons.py  fix_all_buttons2.py  fix_all_locks.py  fix_buttons.py  fix_callbacks.py  fix_destiny.py  fix_keyboard.py  fix_locks.py  fix_pdf_callback.py  fix_profile_magistr.py  fix_profile_magistr2.py  fix_receiver.py  fix_referral.py  fix_referral_syntax.py  fix_service_map.py  fix_services.py  fix_skin_assets.py  fix_syndicate.py  generate_placeholders.py  list_models.py  main.py  patch.diff  (+50 more)
.Jules/: palette.md
.jules/: bolt.md  sentinel.md
ai/: __init__.py  core.py  logic.py  sections.py
archive/: README.md  fix_ai_service_18plus.py  fix_all_buttons3.py  fix_grimoire_master.py  fix_mockmsg.py  fix_mockmsg_admin.py  fix_referral2.py  fix_referral3.py  fix_syntax2.py
configs/: models.py
data/: content_core.json
database/: __init__.py  admin_tools.sql  autoposter.py  autoposter_v2_migration.sql  config.py  core.py  events.py  feedbacks.py  hidden_promos_migration.sql  migration_progress_counters.sql  payments.py  states.py  users.py
modules/: admin.py  autoposter.py  bot_init.py  keyboards.py  middlewares.py  payments.py  profile.py  registration.py  services.py  skins.py  states.py  support.py  tarot.py  utils.py
(+66 files in other folders)
